Fix compilation of vinum(4) when VINUMDEBUG is not defined.

PR:		71341
Submitted by:	Phil Budne <phil@tripadvisor.com>
MT5 candidate.

Former-commit-id: 12e8a82ee5f5ae022e3303614de1ea16e61c592f