sys/dev/vinum/vinumext.h
@@ -1981,7 +1981,7 @@ name|Malloc
 parameter_list|(
 name|x
 parameter_list|)
-value|malloc((x), M_DEVBUF, \ 	curthread->td_proc->p_intr_nesting_level == 0? M_WAITOK: M_NOWAIT)
+value|malloc((x), M_DEVBUF, \ 	curthread->td_intr_nesting_level == 0? M_WAITOK: M_NOWAIT)
 end_define
 
 begin_define
